Added title, headers, etc

--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
-</head>
-<body>
-    
-</body>
-</html>
-    <h1>TEST TEST</h1>
-        <p>ad ipsum lorem</p>
 
-</html>
+<title><b>Tan's Urban Evening Adventure Tours</b></title>
+<h1><b>Tan's Urban Evening Adventure Tours</b></h1>
+
+<h3><i>"I'll show you places at night for money!"</i></h3>
+<p><i>(Only cash. you must arrive with ample cash.)</i></p>
+
+<h2>I offer all-inclusive tours of the following locations:</h2>
