Added city list

--- a/index.html
+++ b/index.html
@@ -15,3 +15,13 @@
 <p><i>(Only cash. you must arrive with ample cash.)</i></p>
 
 <h2>I offer all-inclusive tours of the following locations:</h2>
+
+<nav class="crumbs">
+    <ul>
+        <li class="crumb"><a href=#>O-Bloc -> Chicago, IL</a></li>
+        <li class="crumb"><a href=#>East 5th St. -> Los Angeles, CA</a></li>
+        <li class="crumb"><a href=#>Prospect Ave. -> Kansas City, MO</a></li>
+        <li class="crumb"><a href=#>Lower Fremont Bridge -> Portland, OR</a></li>
+    </ul>
+</nav>
+
