--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<body>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
@@ -16,6 +16,7 @@
 
 <h2>I offer all-inclusive tours of the following locations:</h2>
 
+<div>
 <nav class="crumbs">
     <ul>
         <li class="crumb"><a href=#>O-Bloc -> Chicago, IL</a></li>
@@ -24,4 +25,24 @@
         <li class="crumb"><a href=#>Lower Fremont Bridge -> Portland, OR</a></li>
     </ul>
 </nav>
+</div>
 
+<div>Decide on your desired destination</div>
+    <form>
+        <label for="city1">Chicago</label><br>
+            <input type="button" id="city1" name="city1"><br>
+        <label for="city2">Los Angeles</label><br>
+            <input type="button" id="city2" name="city2"><br>
+        <label for="city3">Kansas City</label><br>
+            <input type="button" id="city3" name="city3"><br>
+        <label for="city4">Portland</label><br>
+            <input type="button" id="city4" name="city4"><br>
+    </form
+
+<h3><b>Excited? You should be! This is a safe, totally inconspicuous service.</b></h3>
+<p><i>Here is some soothing music in case you have unnecessary doubts</i></p>
+
+<iframe> src="https://www.youtube.com/watch?v=k-HdGnzYdFQ" height="200" length="300" title= "Nothing unusual here!" </iframe>
+
+    </body>
+    </html>
