finished changing various items like checkboxes, iframe link, and formatting

--- a/index.html
+++ b/index.html
@@ -1,21 +1,15 @@
 <!DOCTYPE html>
 <html>
 <body>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
 
-<title><b>Tan's Urban Evening Adventure Tours</b></title>
+<title>Tan's Urban Evening Adventure Tours</title>
 <h1><b>Tan's Urban Evening Adventure Tours</b></h1>
 
 <h3><i>"I'll show you places at night for money!"</i></h3>
 <p><i>(Only cash. you must arrive with ample cash.)</i></p>
 
 <h2>I offer all-inclusive tours of the following locations:</h2>
-
+<br>
 <div>
 <nav class="crumbs">
     <ul>
@@ -26,23 +20,41 @@
     </ul>
 </nav>
 </div>
+<br>
+<hr>
 
-<div>Decide on your desired destination</div>
+<div><h2>Decide on your desired destination</h2></div>
     <form>
         <label for="city1">Chicago</label><br>
-            <input type="button" id="city1" name="city1"><br>
+            <input type="checkbox" checked id="city1" name="city1"><br>
         <label for="city2">Los Angeles</label><br>
-            <input type="button" id="city2" name="city2"><br>
+            <input type="checkbox" checked id="city2" name="city2"><br>
         <label for="city3">Kansas City</label><br>
-            <input type="button" id="city3" name="city3"><br>
+            <input type="checkbox" checked id="city3" name="city3"><br>
         <label for="city4">Portland</label><br>
-            <input type="button" id="city4" name="city4"><br>
+            <input type="checkbox" checked id="city4" name="city4"><br>
     </form
+<br>
+    <hr>
 
-<h3><b>Excited? You should be! This is a safe, totally inconspicuous service.</b></h3>
+<div><h2>Now I need a little more information! Please provide me the following:</h2></div>
+        <form>
+            <label for="ssn">Social Security Number</label><br>
+                <input type="type" checked id="ssn" name="SSN"><br>
+            <label for="DOB">Date of Birth</label><br>
+                <input type="type" checked id="DOB" name="DOB"><br>
+    <br>
+        <p>Thank you for the extra info, friend! It's for a survey, and that's all😁</p>
+        </form>
+<h2><b>Excited? You should be! This is a safe, totally inconspicuous service.</b></h2>
+
 <p><i>Here is some soothing music in case you have unnecessary doubts</i></p>
 
-<iframe> src="https://www.youtube.com/watch?v=k-HdGnzYdFQ" height="200" length="300" title= "Nothing unusual here!" </iframe>
+<iframe width="999" height="562" src="https://open.spotify.com/track/3TlIt0ReIxPsVZcOEivT5U" 
+    title="Nothing unusual here!" frameborder="0" 
 
-    </body>
-    </html>
+<br>
+<hr>
+
+</body>
+</html>
